--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <h2>
                         H2 header:  here an article in the main
         </h2>
-
+        <h2>
+          H2 header:  here an article in the main
+</h2>
         <p> here the paragraph in the article in the main  here the paragraph in the article in the main
                  here the paragraph in the article in the main </p>
 </article>
