--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <nav class="topnav" >
                 
                   <a href="index.html">Home</a>
+                  <a href="mystudy.html">My Study</a>
                   <a href="myskills.html">my skills</a>
                   <a href="contactme.html">Contact me</a>
                   
