--- a/myskills.html
+++ b/myskills.html
@@ -21,6 +21,7 @@
 <nav class="topnav" >
         
           <a href="index.html">Home</a>
+          <a href="mystudy.html">My Study</a>
           <a href="myskills.html">my skills</a>
           <a href="contactme.html">Contact me</a>
           
